src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>BvA_Notes__c</fullName>
        <description>Use this field for explanatory notes to appear on budget vs. actual reports... e.g.  if some money was moved between projects.</description>
        <inlineHelpText>Use this field for explanatory notes to appear on budget vs. actual reports... e.g.  if some money was moved between projects.</inlineHelpText>
        <label>BvA Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this grant no longer active?</inlineHelpText>
        <label>Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Fringe_Benefits_Separately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to display fringe benefits separately from salary on the budget vs. actual report.</description>
        <inlineHelpText>Check this box to display fringe benefits separately from salary on the budget vs. actual report.</inlineHelpText>
        <label>Display Fringe Benefits Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Requirements__c</fullName>
        <label>Grant Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include_Operational_Overhead_in_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to add operational overhead to the overhead amount on budget vs. actual report.</description>
        <inlineHelpText>Check this to add operational overhead to the overhead amount on budget vs. actual report.</inlineHelpText>
        <label>Include Operational Overhead in Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Staff__c</fullName>
        <label>Lead Staff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>Numeric code from Chart of Accounts</description>
        <label>Project Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Grant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Grant Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects Managed by Contact</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Use_YTD_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to base the budget vs. actual report on year-to-date revenue and expenses.</description>
        <inlineHelpText>Check this box to base the budget vs. actual report on year-to-date revenue and expenses.</inlineHelpText>
        <label>Use YTD Report</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Code__c</columns>
        <columns>NAME</columns>
        <columns>Use_YTD_Report__c</columns>
        <columns>Include_Operational_Overhead_in_Expense__c</columns>
        <columns>Display_Fringe_Benefits_Separately__c</columns>
        <columns>Project_Grant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>all_wit_project_code</fullName>
        <columns>Project_Code__c</columns>
        <columns>NAME</columns>
        <columns>Use_YTD_Report__c</columns>
        <columns>Include_Operational_Overhead_in_Expense__c</columns>
        <columns>Display_Fringe_Benefits_Separately__c</columns>
        <columns>Project_Grant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All w/ Project Code</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ii0000000yRv3EAE_00Ni000000CBqX7EAL</fullName>
        <active>true</active>
        <field>Deliverable__c.Project__c</field>
        <filterItems>
            <field>Project__c.Closed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Deliverable_Project</name>
    </namedFilters>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>